--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ ol {
 #grid #article {
   padding-left: 25px;
 }
+.mode {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
 @media (max-width:800px) {
   #grid {
     display: block;
